Criação de lógica para curtir e descutir posts